2009-12-09  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndma_tape.c: properly update bytes_moved when reading to
	  connection

2009-12-09  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndma_comm_dispatch.c ndmp-src/ndma_tape.c
	  ndmp-src/ndmagents.h: make mover seek to correct block number

2009-12-09  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/simpleprng.c: better error message from simpleprng on
	  random number mismatch
	* common-src/simpleprng.h: simpleprng_state_t is now a real struct
	* xfer-src/dest-null.c: no need to give buffer offset anymore

2009-12-08  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Fix for GNUTAR/DUMP.
	* restore-src/restore.c: Fix DATA-PATH excahnge with amrecover for
	  reading from a holding disk.

2009-12-08  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c, device-src/device.h:
	  Add device_unaliassed_name function.
	* perl/Amanda/Device.swg: Add unaliassed_name function.

2009-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Fix read_to_connection argument.

2009-12-07  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndmagents.h: use PATH_MAX for drive_name; remove
	  unnecessary include

2009-12-07  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/directtcp.h: mention IP byte order
	* perl/amglue/directtcp.swg device-src/device.c device-src/device.h
	  perl/Amanda/Device.swg: use guint64 instead of gsize for read/write
	  lengths; directtcp_supported is a boolean class attribute instead of a
	  method; listen takes a for_writing argument; SWIG directtcp methods
	* perl/Amanda/Device.pod: document LEOM handling, new methods
	* device-src/directtcp-connection.c: call parent's finalize
	* restore-src/restore.c: pass correct for_writing to listen

2009-12-07  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndma_tape_simulator.c: use g_strlcpy to be safe
	* ndmp-src/ndmagents.h: expand drive_name to 256 bytes
